FileContentsReader: Return contents as a Stream instead of a List.
But still read it into a List first; doing it the "more efficient" way caused
test failures because the underlying Reader was closed before the calling code
had finished traversing the Stream.