@@ -8,8 +8,9 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
+import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public final class FileContentsReader {
 	private FileContentsReader() {
@@ -22,14 +23,21 @@ public final class FileContentsReader {
 				.orElseThrow(() -> new NoSuchFileException(filename));
 	}
 
-	@SuppressWarnings("OverlyBroadThrowsClause")
-	public static Iterable<String> readFileContents(final Class<?> cls, final Path path) throws IOException {
+	public static Stream<String> streamFileContents(final Class<?> cls, final Path path) throws IOException {
+		// Going to List and then to Stream is less efficient, but returning the Stream from
+		// Files or BufferedReader::lines caused test failures because the underlying reader
+		// was closed before calling code had finished traversing the Stream.
+		return readFileContents(cls, path).stream();
+	}
+
+	@SuppressWarnings("WeakerAccess") // We want to support callers who don't need to do Stream ops
+	public static List<String> readFileContents(final Class<?> cls, final Path path) throws IOException {
 		if (Files.isReadable(path)) {
 			return Files.readAllLines(path, StandardCharsets.UTF_8);
 		} else {
 			try (final BufferedReader reader = new BufferedReader(new InputStreamReader(getResourceAsStream(cls,
 					path.toString()), StandardCharsets.UTF_8))) {
-				return reader.lines().collect(Collectors.toList());
+				return reader.lines().toList();
 			}
 		}
 	}
